[package]
name = "rust-axum-pra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.6", features = ["macros"] }
mysql = "23.0.1"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
